--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
   width: 100%;
   height: 100vh;
 }
+
 /* Upper Banner */
 .upper-banner{
   background-color: rgba(9, 11, 17, 0.5);
@@ -22,6 +23,7 @@
   width: calc(100% - 200px);
 
 }
+
 /* Main */
 main{
   width: 100%;
@@ -40,9 +42,25 @@ main{
   width: calc(100% - 200px);
   overflow-y: auto;
 }
+
 /* Footer */
 footer{
   width: 100%;
   height: 100px;
   background-color: #282828;
+}
+
+@media screen and (max-width:600px) {
+  /* Calc width */
+  .main-content{
+    width: calc(100% - 50px);
+  }
+
+  .left-nav{
+    width: 50px;
+  }
+
+  .upper-banner{
+    width: calc(100% - 50px);
+  }
 }
