--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ image{
 span{
   color: inherit;
 }
+
+ul{
+  list-style-type: none;
+}
 /* General */
 .app-container{
   width: 100%;
@@ -30,7 +34,7 @@ span{
   top: 0;
   right: 0;
   height: 90px;
-  width: calc(100% - 200px);
+  width: calc(100% - 250px);
 }
 
 /* Flex */
@@ -43,8 +47,9 @@ span{
 
 .flex-center{
   display: flex;
-  flex-wrap: wrap;
   padding-top: 20px;
+  align-content: flex-start;
+  flex-wrap: nowrap;
   flex-direction: column;
 }
 
@@ -79,15 +84,21 @@ main{
 .left-nav{
   background-color: black;
   color: white;
-  width: 200px;
-  overflow-y: hidden;
+  width: 250px;
+  font-weight: 700;
 }
 /* Left Nav Img */
 .left-nav img{
   width: 30px;
-  margin-left: 10px;
+  margin-left: 20px;
 }
 
+.logo-cont{
+  width: 100%;
+  position: relative;
+  z-index: 3;
+  
+}
 .logo img{
   width: 135px;
 }
@@ -100,6 +111,7 @@ main{
 /* Left nav Menu */
 .nav-menu{
   padding: 20px 0;
+  width: 100%;
 }
 .nav-menu *{
   vertical-align: middle;
@@ -118,28 +130,101 @@ main{
   border-left: 2px solid #a7f72d;
   color: #dcdddc;
 }
+
 /* Playlist */
 .playlists{
-  margin-left: 10px;
+  margin-left: 20px;
+  flex-grow: 3;
+  overflow-y: auto;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+}
+.playlists *{
+  vertical-align: middle;
 }
 .playlists h3{
   color: white;
   text-transform: uppercase;
   font-size: 14px;
 }
+
+.playlists span{
+  color: #0c0c0c;
+  text-transform: uppercase;
+  font-size: 30px;
+  font-weight: 600;
+  background-color: #a3a3a3;
+  padding: 0 12px;
+  margin-right: 5px;
+}
+
+.playlists li{
+  padding: 10px 0;
+  color: #6f6f6f;
+}
+
+.playlists li:hover{
+  color: white;
+}
+
+.playlists li:hover span{
+  background-color: white;
+}
+
+/* Account */
+.account{
+  position: relative;
+  z-index: 2;
+  padding: 0 20px;
+}
+.account img{
+  margin-left: 0;
+   
+}
+.account *{
+  vertical-align: middle;
+}
+.download{
+  font-size: 12px;
+  display: inline-block;
+  color: #595959;
+}
+.download img{
+  width: 20px;
+}
+.account hr{
+  border-top: none;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: #6f6f6f;
+}
+
+.user{
+  background-color: #808080;
+  display: inline-block;
+  border-radius: 20px;
+  overflow: hidden;
+  padding: 0 5px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
 /* Main Content */
 .main-content{
   background-color: #141922;
-  width: calc(100% - 200px);
+  width: calc(100% - 250px);
   overflow-y: auto;
   padding-top: 100px;
 }
+
 
 /* Footer */
 footer{
   width: 100%;
   height: 100px;
   background-color: #282828;
+  position: relative;
+  z-index: 50;
 }
 
 @media screen and (max-width:600px) {
