--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
- /* Reset */
+ /* RESET */
 *{
   margin: 0;
   padding: 0;
@@ -17,7 +17,7 @@ span{
 ul{
   list-style-type: none;
 }
-/* General */
+/* GENERAL */
 .app-container{
   width: 100%;
   height: 100vh;
@@ -73,26 +73,28 @@ ul{
   padding-right: 15px;
 }
 
-/* Main */
+/* MAIN */
 main{
   width: 100%;
   height: calc(100% - 100px);
   display: flex;
 }
 
-/* Left Nav */
+/* LEFT NAV */
 .left-nav{
   background-color: black;
   color: white;
   width: 250px;
   font-weight: 700;
 }
-/* Left Nav Img */
+
+/* NAV Img */
 .left-nav img{
   width: 30px;
   margin-left: 20px;
 }
 
+/* Logo */
 .logo-cont{
   width: 100%;
   position: relative;
@@ -107,7 +109,7 @@ main{
   display: none;
 }
 
-/* Left nav Menu */
+/* NAV Menu */
 .nav-menu{
   padding: 20px 0;
   width: 100%;
@@ -125,13 +127,33 @@ main{
   display: none;
 }
 
-.nav-menu .active-obj{
+/* IMG AND HOVER EFECT */
+.active-obj{
   border-left: 2px solid #a7f72d;
   color: #dcdddc;
 }
 
-.nav-menu .hover-active-obj:hover .color-gray{
-  color:white
+.active-obj img{
+  filter: invert(0.2);
+}
+
+.hover-active-obj img{
+  filter: invert(0.2);
+}
+
+.active-obj:hover img{
+  filter: invert(0);
+}
+
+.active-obj:hover span{
+  color: white;
+}
+
+.hover-active-obj:hover .color-gray{
+  color:white;
+}
+.hover-active-obj:hover img{
+  filter: invert(0);
 }
 
 /* Playlist */
@@ -199,20 +221,29 @@ main{
   color: #6f6f6f;
 }
 
+/* Download */
 .download{
   font-size: 12px;
   display: inline-block;
   color: #595959;
 }
+
+.download img{
+  width: 20px;
+  filter: invert(0.4);
+}
+
 .download:hover{
   color: white;
 }
-.download img{
+
+.download:hover img{
   width: 20px;
+  filter: invert(0);
 }
 
 
-/* Main Content */
+/* MAIN CONTENT */
 .main-content{
   background-color: #141922;
   width: calc(100% - 250px);
@@ -220,7 +251,7 @@ main{
   padding-top: 100px;
 }
 
-/* Footer */
+/* FOOTER */
 footer{
   width: 100%;
   height: 100px;
@@ -230,8 +261,11 @@ footer{
 }
 
 
-
+/*----------------------------------------------------------------------------------------------------------------- 
+                                                  MEDIA 
+-------------------------------------------------------------------------------------------------------------------*/
 @media screen and (max-width:600px) {
+
   /* Calc width */
   .main-content{
     width: calc(100% - 50px);
@@ -242,6 +276,7 @@ footer{
   .upper-banner{
     width: calc(100% - 50px);
   }
+
   /* Display None items */
   .logo{
     display: none;
@@ -255,6 +290,8 @@ footer{
   .playlists{
     display: none;
   }
+
+  /* Left Nav Changing */
   .logo-small img{
     display: block;
     width: 30px;
