--- a/css/style.css
+++ b/css/style.css
@@ -515,6 +515,7 @@ footer{
   flex-grow: 4;
   align-items: center;
   justify-content: center;
+  flex-grow: 3;
 } 
 
 /*----------------------------------------------------------------------------------------------------------------- 
